# oxocard-firmware

./: .gitignore  LICENSE  README.md  build.py  clean.sh  justfile  pyproject.toml
.github/: pages.yml
.github/workflows/: pages.yml
cartridge_scripts/AIR/: air.npy  air_autostart.npy  air_flasher.npy
cartridge_scripts/BREADBOARD/: breadboard_autostart.npy  breadboard_flasher.npy
cartridge_scripts/CONNECTOR/: connector_autostart.npy  connector_flasher.npy
cartridge_scripts/EXPANSION/: expansion_autostart.npy  expansion_flasher.npy
cartridge_scripts/PIXELMATRIX/: pixelmatrix5x5.npy  pixelmatrix_autostart.npy  pixelmatrix_flasher.npy
cartridge_scripts/SYNTHESIZER/: synthesizer_autostart.npy  synthesizer_flasher.npy
cartridge_scripts/TOF/: tof.npy  tof_autostart.npy  tof_flasher.npy
cartridge_scripts/VEROBOARD/: veroboard_autostart.npy  veroboard_flasher.npy
nvs/: makey.csv
templates/: index.html  manifest.json  manifest_merged.json
webpage/: main.js  styles.css
webpage/assets/css/: styles.css
webpage/assets/js/: main.js
